--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
 		}
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.0",
 		"dayjs": "^1.11.7",
+		"jsonwebtoken": "^9.0.0",
 		"mysql2": "^3.2.4"
 	}
 }
