--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"dayjs": "^1.11.7",
 		"jsonwebtoken": "^9.0.0",
 		"mysql2": "^3.2.4",
-		"quill-image-uploader": "^1.2.4"
+		"quill-image-uploader": "^1.2.4",
+		"sweetalert2": "^11.7.5"
 	}
 }
