--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@nuxt/content": "^2.6.0",
 		"@nuxt/devtools": "^0.4.2",
 		"@nuxt/test-utils": "^3.4.2",
+		"@nuxtjs/google-fonts": "^3.0.0",
 		"@nuxtjs/i18n": "8.0.0-beta.11",
 		"@pinia/nuxt": "^0.4.9",
 		"@sfxcode/nuxt-primevue": "^1.1.2",
@@ -63,6 +64,7 @@
 		"jsonwebtoken": "^9.0.0",
 		"mysql2": "^3.2.4",
 		"quill-image-uploader": "^1.2.4",
-		"sweetalert2": "^11.7.5"
+		"sweetalert2": "^11.7.5",
+		"twilio": "^4.11.0"
 	}
 }
