--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@iconify-json/twemoji": "^1.1.11",
 		"@nuxt/content": "^2.6.0",
 		"@nuxt/devtools": "^0.4.2",
+		"@nuxt/image": "^1.0.0-rc.1",
 		"@nuxt/test-utils": "^3.4.2",
 		"@nuxtjs/google-fonts": "^3.0.0",
 		"@nuxtjs/i18n": "8.0.0-beta.11",
