--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"@formkit/nuxt": "^0.17.4",
 		"@vueup/vue-quill": "^1.1.1",
 		"bcrypt": "^5.1.0",
+		"chart.js": "^4.3.3",
 		"country-region-data": "^2.7.0",
 		"dayjs": "^1.11.7",
 		"jsonwebtoken": "^9.0.0",
@@ -71,6 +72,7 @@
 		"primevue": "^3.29.2",
 		"quill-image-uploader": "^1.2.4",
 		"sweetalert2": "^11.7.5",
-		"twilio": "^4.11.0"
+		"twilio": "^4.11.0",
+		"vue-chartjs": "^5.2.0"
 	}
 }
