--- a/package.json
+++ b/package.json
@@ -13,48 +13,27 @@
 		"lint": "eslint --fix .",
 		"test:ui": "vitest --ui",
 		"test:unit": "vitest --run --reporter verbose",
-		"test:coverage": "vitest run --coverage",
-		"story:dev": "histoire dev",
-		"story:build": "histoire build",
-		"story:preview": "histoire preview"
+		"test:coverage": "vitest run --coverage"
 	},
 	"devDependencies": {
-		"@histoire/plugin-nuxt": "^0.16.1",
-		"@histoire/plugin-vue": "^0.16.1",
 		"@iconify-json/carbon": "^1.1.16",
 		"@iconify-json/mdi": "^1.1.50",
 		"@iconify-json/prime": "^1.1.5",
 		"@iconify-json/twemoji": "^1.1.11",
-		"@nuxt/content": "^2.6.0",
 		"@nuxt/devtools": "^0.4.2",
 		"@nuxt/image": "^1.0.0-rc.1",
-		"@nuxt/test-utils": "^3.4.2",
 		"@nuxtjs/google-fonts": "^3.0.0",
 		"@nuxtjs/i18n": "8.0.0-beta.11",
 		"@pinia/nuxt": "^0.4.9",
-		"@tiptap/extension-highlight": "^2.0.3",
-		"@tiptap/extension-text-align": "^2.0.3",
-		"@tiptap/extension-text-style": "^2.0.3",
-		"@tiptap/pm": "^2.0.3",
-		"@tiptap/starter-kit": "^2.0.3",
-		"@tiptap/vue-3": "^2.0.3",
-		"@unocss/nuxt": "^0.51.8",
 		"@vitejs/plugin-vue": "^4.2.1",
 		"@vitest/ui": "^0.30.1",
 		"@vueuse/nuxt": "^10.1.0",
 		"c8": "^7.13.0",
-		"histoire": "^0.16.1",
 		"jsdom": "^21.1.1",
 		"nuxt": "^3.6.1",
 		"sass": "^1.62.1",
 		"typescript": "^5.0.4",
 		"vitest": "^0.30.1"
-	},
-	"pnpm": {
-		"overrides": {
-			"consola": "3.0.1",
-			"unenv": "1.3.1"
-		}
 	},
 	"dependencies": {
 		"@formkit/nuxt": "^0.17.4",
@@ -72,7 +51,6 @@
 		"primevue": "^3.29.2",
 		"quill-image-uploader": "^1.2.4",
 		"sweetalert2": "^11.7.5",
-		"twilio": "^4.11.0",
-		"vue-chartjs": "^5.2.0"
+		"twilio": "^4.11.0"
 	}
 }
