--- a/package.json
+++ b/package.json
@@ -25,15 +25,11 @@
 		"@nuxtjs/google-fonts": "^3.0.0",
 		"@nuxtjs/i18n": "8.0.0-beta.11",
 		"@pinia/nuxt": "^0.4.9",
-		"@vitejs/plugin-vue": "^4.2.1",
-		"@vitest/ui": "^0.30.1",
 		"@vueuse/nuxt": "^10.1.0",
 		"c8": "^7.13.0",
-		"jsdom": "^21.1.1",
 		"nuxt": "^3.6.1",
 		"sass": "^1.62.1",
-		"typescript": "^5.0.4",
-		"vitest": "^0.30.1"
+		"typescript": "^5.0.4"
 	},
 	"dependencies": {
 		"@formkit/nuxt": "^0.17.4",
